# rocprofiler-sdk-windows-poc-hip-tracing

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DYNAMIC_LIBRARY_LOADING_COMPARISON.md  MULTI_TOOL_TEST_RESULTS.md  QUICKSTART.md  README.md  REPOSITORY_CHECKLIST.md  rocprofv3-poc.py
mock-hip-runtime/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  mock_hip_runtime.cpp  mock_hip_runtime.h
mock-rocprofiler-register/: CMakeLists.txt  DESIGN.md  EXAMPLE_USAGE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md  mock_register.cpp  mock_register.h  pe_parser.cpp  pe_parser.h  test_pe_parser.cpp  validate.bat
mock-sdk/: CMakeLists.txt  INTEGRATION.md  QUICK_REFERENCE.md  README.md  example_tool_usage.cpp  mock_rocprofiler_sdk.cpp  mock_rocprofiler_sdk.h  verify_exports.bat
mock-tool/: CMakeLists.txt  README.md  mock_tool.cpp
mock-tool-2/: CMakeLists.txt  README.md  mock_tool_2.cpp
mock-tool-2/include/: mock_tool_2.h
mock-tool/include/: mock_tool.h
test-hip-app/: CMakeLists.txt  README.md  test_app.cpp
